# nnfx

./: notes.txt  pyproject.toml
notebooks/: Untitled.ipynb  backtest-example.ipynb
notebooks/.ipynb_checkpoints/: backtest-example-checkpoint.ipynb
tests/: test_algo.py
